# MaaInspector

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup_embedded_python.py  tailwind.config.js
.github/workflows/: tauri-build.yml
backend/: app.py  config.json  main.py  requirements.txt
backend/common/: utils.py
backend/routes/: agent_routes.py  debug_routes.py  device_routes.py  system_routes.py
backend/untils/: __init__.py  maafw.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/styles/: tailwind.css
src/components/: About.vue  FlowEditor.vue  Home.vue  Settings.vue
src/components/Flow/: ContextMenu.vue  CustomNode.vue  DeviceScreen.vue  InfoPanel.vue  NodeDebugPanel.vue  NodeDetails.vue  NodeEditorModal.vue  NodeSearch.vue
src/components/Flow/Common/: Dropdown.vue
src/components/Flow/DeviceScreensModals/: DeviceScreenCanvas.vue  DeviceScreenImageList.vue  DeviceScreenMaskEditor.vue  DeviceScreenSidebar.vue
src/components/Flow/Modals/: CreateResourceModal.vue  DeleteImagesConfirmModal.vue  DeviceSettingsModal.vue  ResourceSettingsModal.vue  SaveConfirmModal.vue
src/components/Flow/NodeDetailsModals/: NodeAction.vue  (+1 more)
src/components/flow-example/: AnimationEdge.vue  ContextMenu.vue  ProcessNode.vue  initial-elements.js  main.css  useContextMenu.js
src/composables/: useFlowGraph.js
src/services/: api.js  api.ts
src/utils/: flowOptions.js  flowOptions.ts  flowTypes.ts  nodeLogic.js  nodeLogic.ts  useFlowGraph.js  useFlowGraph.ts  useLayout.js  useLayout.ts
(+7 files in other folders)
