[package]
name = "MaaInspector"
version = "0.1.0"
description = "A Tauri App"
authors = ["TanYaShue"]
edition = "2024"

[lib]
name = "tauri_demo1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 核心修改：添加了 Win32_System_Threading 和 Win32_Security ---
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
] }
